stateDiagram-v2
    [*] --> Pending: "Mặc định khi gửi (Default on submit)"
    Pending --> Approved: "Duyệt đơn (Moderator approves)"
    Pending --> Rejected: "Từ chối (Moderator rejects)"
    Pending --> Hidden: "Ẩn theo chính sách (Policy hidden)"
    Approved --> Hidden: "Ẩn sau khi báo cáo (Hidden after report)"
    Hidden --> Approved: "Khôi phục (Admin restores)"
    Rejected --> [*]
    Approved --> [*]

    note right of Pending
      approvalStatus là trạng thái tóm tắt trên thực thể sổ lưu niệm.
      (Summary state on guestbook entry entity)
      Nguồn dữ liệu chuẩn gốc vẫn nằm ở moderationReports.
      (Source of truth remains in moderationReports)
    end note
